Added RSO project

--- a/website/index.html
+++ b/website/index.html
@@ -148,6 +148,36 @@
     <div style="height:50px; width:100%; background-color:#282E34;"></div>
     <!-- Project -->
     <div style="padding-left:80px">
+      <h2 id="About_header">College Event Website</h2>
+      <video style="width: 70%;" controls muted>
+        <source src="../projects/rso.mp4">
+      </video>
+      <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
+        <li>Full-stack MERN website, using MySQL, Express, React/Redux, and Node.js</li>
+        <li>Website allows for college RSO's (Registered Student Organizations) to create events and post them to the home page</li>
+        <li>Features a login, comment, and rating systems</li>
+        <li>Option to limit who can see the event (public/anyone, students only, or club members only)</li>
+        <li>New RSO's can be created by students, and once five students join, the RSO is automatically marked as official and members can begin creating events</li>
+        <li>[No Github link as the repository is private]</li>
+      </ul>
+    </div>
+    <!-- Project -->
+    <div style="padding-left:80px">
+      <h2 id="About_header">UCF Dollar Menu</h2>
+      <video style="width: 70%;" controls muted>
+        <source src="../projects/Dollar.mp4">
+      </video>
+      <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
+        <li>Full-stack MERN website, using MongoDB, Express, React/Redux, and Node.js</li>
+        <li>Shows cheap food for college students that is within walking distance from the college campus</li>
+        <li>Features open-source map Leaflet</li>
+        <li>Includes Swagger API tester ran from the same server</li>
+        <li>Uses React Native to create a mobile app of the site</li>
+        <li><a href="https://github.com/Jasondhillon/ucfdollarmenu">Github</a></li>
+      </ul>
+    </div>
+    <!-- Project -->
+    <div style="padding-left:80px">
       <h2 id="About_header">Fishing</h2>
       <video style="width: 70%;" controls muted>
         <source src="../projects/fishing.mp4">
@@ -172,22 +202,6 @@
         <li>Contacts are saved to each user's account</li>
         <li>Features search, edit, and delete capabilities</li>
         <li><a href="https://github.com/Jasondhillon/ContactManager">Github</a></li>
-      </ul>
-    </div>
-
-    <!-- Project -->
-    <div style="padding-left:80px">
-      <h2 id="About_header">UCF Dollar Menu</h2>
-      <video style="width: 70%;" controls muted>
-        <source src="../projects/Dollar.mp4">
-      </video>
-      <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
-        <li>Full-stack MERN website, using MongoDB, Express, React/Redux, and Node.js</li>
-        <li>Shows cheap food for college students that is within walking distance from the college campus</li>
-        <li>Features open-source map Leaflet</li>
-        <li>Includes Swagger API tester ran from the same server</li>
-        <li>Uses React Native to create a mobile app of the site</li>
-        <li><a href="https://github.com/Jasondhillon/ucfdollarmenu">Github</a></li>
       </ul>
     </div>
   </div>
