--- a/website/index.html
+++ b/website/index.html
@@ -155,9 +155,9 @@
       <ul id="quote" style="color: whitesmoke; padding-left:80px; padding-top: 15px;padding-bottom: 15px; margin: 0; width:unset; text-align: left;">
         <li>Full-stack MERN website, using MySQL, Express, React/Redux, and Node.js</li>
         <li>Website allows for college RSO's (Registered Student Organizations) to create events and post them to the home page</li>
-        <li>Features a login, comment, and rating systems</li>
+        <li>Features login, comment, and rating systems</li>
         <li>Option to limit who can see the event (public/anyone, students only, or club members only)</li>
-        <li>New RSO's can be created by students, and once five students join, the RSO is automatically marked as official and members can begin creating events</li>
+        <li>New RSO's can be created by students, once five students join, the RSO is automatically marked as official and members can begin creating events</li>
         <li>[No Github link as the repository is private]</li>
       </ul>
     </div>
